--- a/front/html/chat.html
+++ b/front/html/chat.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat-Page</title>
-    <link rel="stylesheet" href="./chat-page.css">
-    <link rel="stylesheet" href="./common.css">
+    <link rel="stylesheet" href="../css/chat.css">
+    <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css"> 
 </head>
 <body>
