--- a/front/html/chat.html
+++ b/front/html/chat.html
@@ -6,68 +6,117 @@
     <title>Chat-Page</title>
     <link rel="stylesheet" href="../css/chat.css">
     <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css"> 
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
 </head>
 <body>
     <div class="inner-header">
-        <i class="xi-arrow-left"></i>
-        <div class="Qlist">다른 질문 선택하기</div>
+        <i class="xi-arrow-left" id="back"></i>
+        <div class="Qlist" id="list">다른 질문 선택하기</div>
     </div>
     <div class="inner-div">        
-        <div class="main-div">
+        <div class="main-div"> 
             <div class="chatting">
                 <!--이부분은 나중에 js로 알아서 생성되게 바꾸기-->
                 <div class="chatbot">
-                    <div class="profile"></div>
-                    <div class="contentC">깻잎을 왜 떼줘? 난 이해가 안감</div>
+                    <div class="profile">
+                        <div class="imgdiv">
+                            <img src="../img/roni.png" alt="roni" class="imgpro">
+                        </div>
+                    </div>
+                    <div class="chatbox">
+                        <div class="name">로니</div>
+                        <div class="contentC">깻잎을 왜 떼줘? 난 이해가 안감</div>
+                    </div>
                 </div>
                 <div class="user">
                     <div class="contentU">한국인이라면 깻잎 잡아주는게 기본 아니야?</div>
                 </div>
 
                 <div class="chatbot">
-                    <div class="profile"></div>
-                    <div class="contentC">사람이라면 혼자 깻잎은 뗄 수 있어</div>
+                    <div class="profile">
+                        <div class="imgdiv">
+                            <img src="../img/roni.png" alt="roni" class="imgpro">
+                        </div>
+                    </div>
+                    <div class="chatbox">
+                        <div class="name">로니</div>
+                        <div class="contentC">사람이라면 혼자 깻잎은 뗄 수 있어ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ</div>
+                    </div>
                 </div>
                 <div class="user">
                     <div class="contentU">아니 한 손으로 젓가락질 하는데 불편해보이면 도와주는게 맞지</div>
                 </div>
 
                 <div class="chatbot">
-                    <div class="profile"></div>
-                    <div class="contentC">사람이라면 혼자 깻잎은 뗄 수 있어</div>
+                    <div class="profile">
+                        <div class="imgdiv">
+                            <img src="../img/roni.png" alt="roni" class="imgpro">
+                        </div>
+                    </div>
+                    <div class="chatbox">
+                        <div class="name">로니</div>
+                        <div class="contentC">사람이라면 혼자 깻잎은 뗄 수 있어. 사람이라면 혼자 깻잎은 뗄 수 있어. 사람이라면 혼자 깻잎은 뗄 수 있어. 사람이라면 혼자 깻잎은 뗄 수 있어. </div>
+                    </div>
                 </div>
                 <div class="user">
                     <div class="contentU">아니 한 손으로 젓가락질 하는데 불편해보이면 도와주는게 맞지</div>
                 </div>
 
                 <div class="chatbot">
-                    <div class="profile"></div>
-                    <div class="contentC">사람이라면 혼자 깻잎은 뗄 수 있어</div>
+                    <div class="profile">
+                        <div class="imgdiv">
+                            <img src="../img/roni.png" alt="roni" class="imgpro">
+                        </div>
+                    </div>
+                    <div class="chatbox">
+                        <div class="name">로니</div>
+                        <div class="contentC">사람이라면 혼자 깻잎은 뗄 수 있어</div>
+                    </div>
                 </div>
                 <div class="user">
                     <div class="contentU">아니 한 손으로 젓가락질 하는데 불편해보이면 도와주는게 맞지</div>
                 </div>
 
                 <div class="chatbot">
-                    <div class="profile"></div>
-                    <div class="contentC">사람이라면 혼자 깻잎은 뗄 수 있어</div>
+                    <div class="profile">
+                        <div class="imgdiv">
+                            <img src="../img/roni.png" alt="roni" class="imgpro">
+                        </div>
+                    </div>
+                    <div class="chatbox">
+                        <div class="name">로니</div>
+                        <div class="contentC">사람이라면 혼자 깻잎은 뗄 수 있어</div>
+                    </div>
                 </div>
                 <div class="user">
                     <div class="contentU">아니 한 손으로 젓가락질 하는데 불편해보이면 도와주는게 맞지</div>
                 </div>
 
                 <div class="chatbot">
-                    <div class="profile"></div>
-                    <div class="contentC">사람이라면 혼자 깻잎은 뗄 수 있어</div>
+                    <div class="profile">
+                        <div class="imgdiv">
+                            <img src="../img/roni.png" alt="roni" class="imgpro">
+                        </div>
+                    </div>
+                    <div class="chatbox">
+                        <div class="name">로니</div>
+                        <div class="contentC">사람이라면 혼자 깻잎은 뗄 수 있어</div>
+                    </div>
                 </div>
                 <div class="user">
                     <div class="contentU">아니 한 손으로 젓가락질 하는데 불편해보이면 도와주는게 맞지</div>
                 </div>
 
                 <div class="chatbot">
-                    <div class="profile"></div>
-                    <div class="contentC">사람이라면 혼자 깻잎은 뗄 수 있어</div>
+                    <div class="profile">
+                        <div class="imgdiv">
+                            <img src="../img/roni.png" alt="roni" class="imgpro">
+                        </div>
+                    </div>
+                    <div class="chatbox">
+                        <div class="name">로니</div>
+                        <div class="contentC">사람이라면 혼자 깻잎은 뗄 수 있어</div>
+                    </div>
                 </div>
                 <div class="user">
                     <div class="contentU">아니 한 손으로 젓가락질 하는데 불편해보이면 도와주는게 맞지요</div>
@@ -75,11 +124,13 @@
 
                 
             </div>
-            <div class="footer">
-                <div class="inputbox"></div>
-                <div class="xi-send"></div>
-            </div>
+        </div>
+        <div class="footer">
+            <textarea name="text" id="input" class="inputbox"></textarea>
+            <!-- <input type="text" class="inputbox" id="input"> -->
+            <div class="xi-send" id="send"></div>
         </div>
     </div>
+    <script src="../js/chat.js"></script>
 </body>
 </html>  
