--- a/front/chat/chat.html
+++ b/front/chat/chat.html
@@ -16,7 +16,18 @@
         </header>      
         <div class="container"> 
             <div id="chatting" class="chatting">
-                <!--이부분은 나중에 js로 알아서 생성되게 바꾸기-->
+                <div class="chatbot">
+                    <div class="profile">
+                        <div class="imgdiv">
+                            <img src="../images/boy.png" alt="roni" class="imgpro">
+                        </div>
+                    </div>
+                    <div class="chatbox">
+                        <div class="name">토니</div>
+                        <div class="contentC">먼저 의견을 제시 해주세요!</div>
+                    </div>
+                </div>
+                <!-- 이부분은 나중에 js로 알아서 생성되게 바꾸기
                 <div class="chatbot">
                     <div class="profile">
                         <div class="imgdiv">
@@ -61,7 +72,7 @@
                 <div class="user">
                     <div class="contentU">아니 한 손으로 젓가락질 하는데 불편해보이면 도와주는게 맞지</div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <footer>
             <div class="footer">
