--- a/front/chat/chat.html
+++ b/front/chat/chat.html
@@ -17,63 +17,17 @@
         <div class="container"> 
             <div id="chatting" class="chatting">
                 <div class="chatbot">
-                    <div class="profile">
+                    <!-- <div class="profile">
                         <div class="imgdiv">
                             <img src="../images/boy.png" alt="roni" class="imgpro">
                         </div>
-                    </div>
-                    <div class="chatbox">
+                    </div> -->
+                    <!-- <div class="chatbox">
                         <div class="name">토니</div>
                         <div class="contentC">먼저 의견을 제시 해주세요!</div>
-                    </div>
+                    </div> -->
                 </div>
-                <!-- 이부분은 나중에 js로 알아서 생성되게 바꾸기
-                <div class="chatbot">
-                    <div class="profile">
-                        <div class="imgdiv">
-                            <img src="../images/boy.png" alt="roni" class="imgpro">
-                        </div>
-                    </div>
-                    <div class="chatbox">
-                        <div class="name">토니</div>
-                        <div class="contentC">깻잎을 왜 떼줘? 난 이해가 안감</div>
-                    </div>
-                </div>
-                <div class="user">
-                    <div class="contentU">한국인이라면 깻잎 잡아주는게 기본 아니야?</div>
-                </div>
-
-                <div class="chatbot">
-                    <div class="profile">
-                        <div class="imgdiv">
-                            <img src="../images/boy.png" alt="roni" class="imgpro">
-                        </div>
-                    </div>
-                    <div class="chatbox">
-                        <div class="name">토니</div>
-                        <div class="contentC">사람이라면 혼자 깻잎은 뗄 수 있어ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ</div>
-                    </div>
-                </div>
-                <div class="user">
-                    <div class="contentU">아니 한 손으로 젓가락질 하는데 불편해보이면 도와주는게 맞지</div>
-                </div>
-
-                <div class="chatbot">
-                    <div class="profile">
-                        <div class="imgdiv">
-                            <img src="../images/boy.png" alt="roni" class="imgpro">
-                        </div>
-                    </div>
-                    <div class="chatbox">
-                        <div class="name">토니</div>
-                        <div class="contentC">사람이라면 혼자 깻잎은 뗄 수 있어. 사람이라면 혼자 깻잎은 뗄 수 있어. 사람이라면 혼자 깻잎은 뗄 수 있어. 사람이라면 혼자 깻잎은 뗄 수 있어. </div>
-                    </div>
-                </div>
-                <div class="user">
-                    <div class="contentU">아니 한 손으로 젓가락질 하는데 불편해보이면 도와주는게 맞지</div>
-                </div>
-            </div> -->
-        </div>
+            </div>
         <footer>
             <div class="footer">
                 <textarea name="text" id="input" class="inputbox"></textarea>
